# naja

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  COPYING  MIGRATION_STATUS.md  Makefile  PYGAME_ADAPTER_DEMO.md  README.md  assets.py  config.py  constants.py  entities.py  find_large_files.py  kobra.py  kobra_legacy.py  naja.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  state.py  test_collision_logic.py
.claude/: CLAUDE.md  settings.local.json
.cursor/rules/: code_style.mdc  contribution_workflow.mdc  ecs_base_system.mdc  ecs_coding_standards.mdc  ecs_entities_components.mdc  ecs_migration_map.mdc  ecs_migration_plan.mdc  ecs_overview.mdc  ecs_parallel_migration.mdc  ecs_project_structure.mdc  ecs_render_system.mdc  ecs_systems.mdc  ecs_testing.mdc  ecs_ui_system.mdc  game_mechanics.mdc  project_info.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  ci-lint-fmt.yml  ci-test.yml  ci.yml  main-pr-check.yml  ruff.yml
assets/font/: README.txt
assets/sound/: eat.flac
docs/: CONTRIBUTING.md  README.md  REFACTOR_GAMEPLAY_SCENE.md  UNUSED_FILES_ANALYSIS.md  architecture.md  conventions.md  conventions.md~  exercise.md  issues.md  issues.md~  manual.md  next_steps.md
docs/adr/: 0001-choose-ecs.md
docs/assignment/: README.md  conventions.md  issues.md  (+1 more)
old_code/: README.md  config.py  entities.py  settings.py  state.py
src/: assets.py  config.py  constants.py  entities.py  menu.py  power_ups.py  settings.py  state.py
tests/: __init__.py  test_pygame_adapter_demo.py
(+147 files in other folders)
